# misc

./: CMakeLists.txt  README.md
clut/: clut.cpp  clut.h
clut/samples/: boxFilter.cl  boxFilter.cpp  canny.cl
cpp/: bitfield.cpp  boost_regex.cpp  codec_mac_addr.cpp  copy_elision.cpp  direct_openvx_test.cpp  divide_by_zero.cpp  domain_sock_client.cpp  domain_sock_server.cpp  exec.cpp  find_corners.cpp  freetype_example.cpp  friend_member_function.cpp  function_template.cpp  ifaddrs.cpp  initializer_list.cpp  interval_timer.cpp  jsoncpp_usage.cpp  lambda_expression.cpp  lexical_cast.cpp  linear_algorithm.cpp  map_key.cpp  native_gles.cpp  native_gles.h  neno_bilinear_remap.cpp  neon_add.cpp  no-exception-support.cpp  pointer_address.cpp  print_argv_env.cpp  print_stdin.cpp  private_destructor.cpp  pthread_tls.cpp  ptree_usage.cpp  py_extention_example.cpp  regex.cpp  rvalue_reference.cpp  split_str.cpp  sqlite3_exec.cpp  static_object.cpp  string_compare.cpp  tcp_client.cpp  (+14 more)
filesvr/: CMakeLists.txt  file_client.cpp  file_server.cpp  log.h  utils.cpp  utils.h
fingerpaint/app/: build.gradle
fingerpaint/app/src/main/: AndroidManifest.xml
fingerpaint/app/src/main/java/com/hao/fingerpaint/: Character.java  ColorPickerDialog.java  DataManager.java  FingerPaint.java  MyView.java
fingerpaint/app/src/main/res/values/: strings.xml
go/swig/: call_c++_from_go.ppt
go/swig-go-demo/src/capture/: capture.swigcxx  capture_test.go
go/swig-go-demo2/src/capture/: capture.cpp  capture.go  capture.h  capture.i  capture_test.go  capture_wrap.cxx
go/swig-go-demo2/src/capture-app/: capture-app.go
hik/: hik-camera-isapi.txt  ikv-camera-client.py  recordDownloader.py  recordFinder.py  recordScheduler.py
include/opencv2/: imvt.hpp  oclrenderpano.hpp
include/opencv2/imvt/: Surround360_PixFlow.h  ocl_novelview.hpp  ocl_optflow.h  ocl_optflow.hpp  trace.hpp
include/opencv2/oclrenderpano/: ocl_novelview.hpp  ocl_optflow.hpp
ipucvt/: build.sh
ipucvt/src/: CMakeLists.txt  ipu_cvt.cpp  ipu_cvt.h  ipu_cvt_test.cpp  ipu_utils.cpp  ipu_utils.h
jpeg/: libjpeg_example.c  libjpeg_wrapper.c  libjpeg_wrapper.h  libjpeg_wrapper_test.c  turbojpeg_example.c
panoviewer/: CMakeLists.txt  ocl_utils.cpp  ocl_utils.h  ocl_utils_test.cpp  pano_test.cpp  plane_to_sphere_map.cl  sum.cl  utils.cpp  utils.h
processmanager/: fd_watcher.cpp  fd_watcher.h  framework_log.h  framework_utils.h  print_stdin.sh  process.cpp  process.h  process_manager.cpp  process_manager.h  signal_watcher.cpp  signal_watcher.h  test.cpp
processmanager/new-impl/: CMakeLists.txt  log.h  process.cpp  process.h  test_process_manager.cpp  utils.h
py/: align_faces.py  app_cpu_mem_status.py  crawl_baidu_image.py  crawl_bing_image.py  detect_drowsiness.py  dms_recorder.py  draw_circle.py  head_pose_estimate.py  jpeg_uploader.py  jpeg_webserver.py  label_image.py  ocv_convert_color.py  progress_bar.py  record_video.py  record_videos.py  time_webserver.py
src/: coloradjust.cpp  novelview.cpp  optflow.cpp  optflow.hpp  precomp.hpp  remap.cpp  render.cpp  surround360_novelview.cpp  surround360_novelview.hpp  surround360_pixflow.hpp  trace.cpp  zcamutils.cpp
src/opencl/: novelview.cl  optflow.cl  remap.cl  resize.cl  scale.cl  sepfilter2d.cl  sobel.cl  zcamutils.cl
stuffs/dbus/: dbus-example.c
stuffs/glib/: Makefile  maman-bar-test.c  maman-bar.c  maman-bar.h
stuffs/gprof/: README.txt  gprof_test.c
stuffs/mysql/: Note.txt  mysql_cross_toolchain.cmake  mysql_test.cpp
stuffs/sh/: 2ext3.sh  adb_logcat.sh  gcov_helper.sh  install_ime.sh  prep_qemu_sysimg.sh  restore.sh  vehiclemw_ip.sh  vehiclemw_sdcard.sh
test/: test_precomp.hpp
vpucodec/: build.sh  unit_test.sh
vpucodec/src/: CMakeLists.txt  vpu_codec.cpp  vpu_codec.h  vpu_codec_test.cpp  vpu_dec.cpp  vpu_dec.h  vpu_dec_h264.cpp  vpu_dec_h264.h  vpu_dec_jpeg.cpp  vpu_dec_jpeg.h  vpu_enc.cpp  vpu_enc.h  vpu_enc_h264.cpp  vpu_enc_h264.h  vpu_enc_jpeg.cpp  vpu_enc_jpeg.h  vpu_fb.cpp  vpu_fb.h  vpu_utils.cpp  vpu_utils.h
vpucodec/unit_test/: CMakeLists.txt
vpucodec/unit_test/common/: vpu_dec_h264_mock.h  vpu_dec_jpeg_mock.h  vpu_dec_mock.h  vpu_enc_h264_mock.h  vpu_enc_jpeg_mock.h  vpu_enc_mock.h  vpu_fb_mock.h  vpu_io_mock.h  vpu_lib.h  vpu_lib_mock.h  vpu_utils_mock.h
vpucodec/unit_test/test_vpu_codec/: CMakeLists.txt  run.sh  test_vpu_codec.cpp
vpucodec/unit_test/test_vpu_dec/: CMakeLists.txt  run.sh  test_vpu_dec.cpp
vpucodec/unit_test/test_vpu_enc/: CMakeLists.txt  run.sh  test_vpu_enc.cpp
vpucodec/unit_test/test_vpu_h264/: CMakeLists.txt  run.sh  test_vpu_h264.cpp
vpucodec/unit_test/test_vpu_jpeg/: CMakeLists.txt  run.sh  test_vpu_jpeg.cpp
zc/: CMakeLists.txt  README.md
zc/include/opencv2/: oclrenderpano.hpp
zc/include/opencv2/oclrenderpano/: ocl_buffer.hpp  ocl_coloradjust.hpp  ocl_novelview.hpp  ocl_optflow.hpp  trace.hpp
zc/src/: buffer.cpp  coloradjust.cpp  novelview.cpp  optflow.cpp  render.cpp  zcamutils.cpp
zc/src/opencl/: coloradjust.cl  novelview.cl  optflow.cl  remap.cl  resize.cl  scale.cl  sepfilter2d.cl  sobel.cl  zcamutils.cl
